--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="piano">
+      <!-- Octave 4 -->
       <button class="white-key C4-key"></button>
       <button class="black-key Db4-key"></button>
       <button class="white-key D4-key"></button>
@@ -18,13 +19,34 @@
       <button class="white-key A4-key"></button>
       <button class="black-key Bb4-key"></button>
       <button class="white-key B4-key"></button>
+
+      <!-- Octave 5 -->
       <button class="white-key C5-key"></button>
       <button class="black-key Db5-key"></button>
       <button class="white-key D5-key"></button>
       <button class="black-key Eb5-key"></button>
       <button class="white-key E5-key"></button>
+      <button class="white-key F5-key"></button>
+      <button class="black-key Gb5-key"></button>
+      <button class="white-key G5-key"></button>
+      <button class="black-key Ab5-key"></button>
+      <button class="white-key A5-key"></button>
+      <button class="black-key Bb5-key"></button>
+      <button class="white-key B5-key"></button>
+
+      <!-- Octave 6 -->
+      <button class="white-key C6-key"></button>
+      <button class="black-key Db6-key"></button>
+      <button class="white-key D6-key"></button>
+      <button class="black-key Eb6-key"></button>
+      <button class="white-key E6-key"></button>
+
+      
     </div>
 
     <script src="script.js"></script>
+    <footer id="footer"> 
+      <p><b>Copyright &copy; 2020 Russell Kang</b></p>
+    </footer>
   </body>
 </html>
